@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.941 2008-10-04 22:15:05 castaglia Exp $
+$Id: NEWS,v 1.942 2008-10-06 17:20:22 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -14,6 +14,7 @@ CVS
 - Bug 3114 - Bad handling of uid/gid parameters for CreateHome.
 - Bug 3115 - Cross-site request forgery.
 - Bug 3116 - SQLNegativeCache with no group info can cause segfault.
+- Bug 3117 - Authentication improperly allowed (Bug#2922 regression).
 
 1.3.2rc2 - Released 17-Sep-2008
 --------------------------------
